--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/adi_iio
-	previous = 
-	base = 842c15c
+	previous = 842c15c
+	base = 521861c
 	trim = 
 	trimbase = 
