--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/adi_iio
-	previous = 
-	base = 0eaf74d
+	previous = 0eaf74d
+	base = 580abfc
 	trim = 
 	trimbase = 
