--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.0": ["Analog Devices", "adrian.suciu@analog.com"]}
+{"1.0.1": ["Analog Devices", "adrian.suciu@analog.com"], "1.0.0": ["Analog Devices", "adrian.suciu@analog.com"]}
